# glsim

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup.py
cmake/: ShaderUtils.cmake
glsim/: __init__.py  _glsim.pyi
pyglsim/: __init__.py  _pyglsim.pyi  bindings.cpp
pyglsim/tests/: test_all.py  test_ecs.py  test_graphics.py  test_physics.py  test_scene.py
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
shaders/: CMakeLists.txt  bundler.cpp
shaders/pipelines/unlit/: unlit.frag  unlit.vert  unlit_common.glsl
src/: pch.h
src/bindings/: bindings.cpp
src/core/: assert.h  bindings.cpp  components.h  engine.cpp  engine.h  event_system.h  gpu_context.cpp  gpu_context.h  input.cpp  input.h  log.cpp  log.h  ref_counted.h  registry.cpp  registry.h  registry.inl  system.h  transform.cpp  transform.h  uid.cpp  uid.h  world.cpp  world.h
src/debug/: log.cpp  log.h
src/graphics/: aabb.cpp  aabb.h  camera.cpp  camera.h  graphics_pipeline.cpp  graphics_pipeline.h  mesh.cpp  mesh.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  rendering_system.cpp  rendering_system.h  texture.cpp  texture.h  window.cpp  window.h
src/physics/: physics_system.cpp  physics_system.h  rigidbody.cpp  rigidbody.h
src/scene/: registry.cpp  registry.h  registry.inl  system.h  world.cpp  world.h
tests/: CMakeLists.txt  test_all.py  test_ecs.py  test_engine.py  test_graphics.py  test_physics.py  test_scene.py
tests/core/: test_scene.cpp  test_transform.cpp
